--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4716,9 +4716,9 @@ F(x,y)=\begin{cases}
 
 \begin{problem}
  Приведите пример пары $X$ и $Y$ у которой нет совместной функции плотности, 
- однако $X$ и $Y$ равномерно\addtag{распределение!равномерное} распределены на отрезке $[0;1]$.
+ однако $X$ и $Y$ по отдельности равномерно\addtag{распределение!равномерное} распределены на отрезке $[0;1]$.
 \begin{sol}
-  Например\addtag{распределение!равномерное}, $X\sim \dU[0;1]$ и $Y=X$.
+Например\addtag{распределение!равномерное}, $X\sim \dU[0;1]$ и $Y=X$.
 \end{sol}
 \end{problem}
 
@@ -4759,9 +4759,8 @@ f(x, y) = \begin{cases}
 \]
 
 \begin{enumerate}
-\item Выпишите дифференциальную форму вероятностей для пары $X$ и $Y$.
-\item Найдите дифференциальную форму для $S = X+Y$ и $R = X/(X + Y)$.
-\item Найдите совместную функцию плотности для $S = X+Y$ и $R = X/(X + Y)$.
+\item Найдите совместную функцию плотности для $S = X+Y$ и $R = X/(X + Y)$, используя якобиан.
+\item Найдите совместную функцию плотности для $S = X+Y$ и $R = X/(X + Y)$, используя дифференциальные формы.
 \end{enumerate}
 \begin{sol}
 \end{sol}
@@ -4773,9 +4772,8 @@ f(x, y) = \begin{cases}
 где $R=\sqrt{-2\ln U_1}$, а $\alpha = 2\pi U_2$.
 
 \begin{enumerate}
-\item Выпишите дифференциальную форму для пары $U_1$, $U_2$.
-\item Выпишите дифференциальную форму для пары $Y_1$, $Y_2$.
-\item Найдите совместный закон распределения $Y_1$ и $Y_2$;
+\item Найдите совместный функцию плотности $Y_1$ и $Y_2$, используя якобиан.
+\item Найдите совместный функцию плотности $Y_1$ и $Y_2$, используя дифференциальные формы.
 \item Верно ли, что $Y_1$ и $Y_2$ независимы?
 \item Как распределены $Y_1$ и $Y_2$ по отдельности?
 \end{enumerate}
@@ -4786,20 +4784,20 @@ f(x, y) = \begin{cases}
 
 
 \begin{problem}
-В пуассоновском потоке\addtag{распределение!Пуассона}\addtag{пуассоновский поток} с интенсивностью $\lambda$ время наступления $k$-го события распределено согласно гамма-распределению $Gamma(k, \lambda)$ 
-и имеет вероятностную дифференциальную форму
-
+В пуассоновском потоке\addtag{распределение!Пуассона}\addtag{пуассоновский поток} 
+с интенсивностью $\lambda$ время наступления $k$-го события распределено согласно гамма-распределению $\dGamma(k, \lambda)$,
 \[
-\P(Y \in [y; y+dy]) = const \cdot y^{k-1} \cdot \exp(-\lambda y) \, dy, \text{ при } y\geq 0;
+\P(Y \in [y; y+ \Delta]) = const \cdot y^{k-1} \cdot \exp(-\lambda y) \, dy + o(\Delta), \text{ при } y\geq 0.
 \]
-
-До прихода Ёжика Медвежонок сидел на крылечке один и насчитал $k_1$ падающую звезду. А после прихода Ёжика Медвежонок насчитал ещё $k_2$ падающих звёзд. Пусть $Y_1$ и $Y_2$ — время, которое которое наблюдал за звёздами Медвежонок до и после прихода Ёжика.
+До прихода Ёжика Медвежонок сидел на крылечке один и насчитал $k_1$ падающую звезду. 
+А после прихода Ёжика Медвежонок насчитал ещё $k_2$ падающих звёзд. 
+Пусть $Y_1$ и $Y_2$ — время, которое которое наблюдал за звёздами Медвежонок до и после прихода Ёжика.
 
 \begin{enumerate}
-\item Выпишите совместную дифференциальную форму для $Y_1$ и $Y_2$.
-\item Найдите совместную дифференциальную форму для $S=Y_1 + Y_2$ и $Z=Y_1/S$.
-\item С точностью до сомножителя выпишите дифференциальную форму для доли времени, в течение которого Медвежонок наблюдал звёзды один.
-\item Выпишите функцию плотности бета-распределения.
+\item Напишите совместную функцию плотности для пары $Y_1$ и $Y_2$.
+\item Найдите совместную функцию плотности для пары $S=Y_1 + Y_2$ и $Z=Y_1/S$, используя якобиан.
+\item Найдите совместную функцию плотности для пары $S=Y_1 + Y_2$ и $Z=Y_1/S$, используя дифференциальные формы.
+\item С точностью до сомножителя выпишите функцию плотности для доли времени, в течение которого Медвежонок наблюдал звёзды один.
 \end{enumerate}
 \begin{sol}
 \end{sol}
@@ -4815,8 +4813,8 @@ f(x, y) = \begin{cases}
 	\item Найдите совместную функцию плотности пары величин $X$ и $Y$.
 \end{enumerate}
 \begin{sol}
-Величина $X$ равномерна\addtag{распределение!равномерное} на $[-1;1]$; 
-пара $(X, Y)$ равномерна\addtag{распределение!равномерное} в круге $x^2+y^2 \leq 1$.
+% Величина $X$ равномерна\addtag{распределение!равномерное} на $[-1;1]$; 
+% пара $(X, Y)$ равномерна\addtag{распределение!равномерное} в круге $x^2+y^2 \leq 1$.
 \end{sol}
 \end{problem}
 
