--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2747,7 +2747,28 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{sol}
 \end{problem}
   
+\newcommand{\strx}{\textasteriskcentered}
 
+
+\begin{comment}
+\begin{problem}
+Цензор Лео подкидывает правильную монетку.
+
+Е\strx\strx\strx{ } \strx о\strx е\strx\strx\strx{ } \strx\strx\strx\strx\strx\strx е\strx{ } \strx е\strx\strx о\strx, 
+\strx о{ } \strx ео{ } \strx е\strx\strx\strx\strx\strx\strx\strx е\strx{ } \strx\strx е{ } \strx\strx\strx\strx\strx, \strx\strx о\strx е \emph{\strx е\strx о\strx\strx\strx\strx\strx\strx\strx} \strx\strx{ } \strx\strx ое\strx о{ } \strx\strx е\strx\strx. 
+Е\strx\strx\strx{ } \strx о\strx е\strx\strx\strx{ } \strx\strx\strx\strx\strx\strx е\strx{ } о\strx\strx о\strx,{ } \strx о{ } \strx ео{ } \strx е\strx\strx\strx\strx\strx\strx\strx е\strx{ } \strx\strx е{ } \strx\strx\strx\strx\strx, \strx\strx о\strx е{ } \emph{\strx е\strx о\strx\strx\strx\strx\strx\strx\strx}{ } \strx\strx{ } \strx\strx ое\strx о{ } \strx\strx е\strx\strx,{ } \strx{ } \strx е\strx о\strx\strx\strx о\strx\strx\strx\strx{ } $2/3$,
+\strx~\strx~\strx е\strx о\strx\strx\strx о\strx\strx\strx\strx{ } $1/3${ } \strx е\strx\strx\strx\strx\strx\strx\strx е\strx{ } \strx\strx е{ } \strx\strx\strx\strx\strx{ } \strx оо\strx\strx е. 
+
+\strx\strx\strx\strx\strx\strx e{ } \strx\strx\strx o\strx\strx\strx\strx{ } \strx е\strx о\strx\strx\strx о\strx\strx\strx{ } \strx о\strx о\strx,{ } \strx\strx о{ } \strx о\strx е\strx\strx\strx{ } \strx\strx\strx\strx\strx\strx{ } \strx е\strx\strx о\strx.
+\begin{sol}
+Если монетка выпадает решкой, то Лео цензурирует все буквы, кроме \emph{несогласных} из своего имени. 
+Если монетка выпадает орлом, то Лео цензурирует все буквы, кроме \emph{несогласных} из своего имени, с вероятностью $2/3$,
+а с вероятностью $1/3$ цензурирует все буквы вообще. 
+
+Найдите условную вероятность того, что монетка выпала решкой.   
+\end{sol}
+\end{problem}
+\end{comment}    
 
 
 
