more on normal distr

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -4970,7 +4970,6 @@ $Y=2$ & 0.1 & 0.1 & 0.2 \\
 \item Найдите такое число $b$, что $\P(\bar X_{100} \in [4-b; 4+b])=0.5$
 \end{enumerate}
 
-
 Решите эту задачу двумя способами: с использованием компьютера и с помощью таблиц. 
 В R можно использовать функции \verb|pnorm| и \verb|qnorm|.
 В python можно использовать \verb|scipy.stats.norm.cdf| и \verb|scipy.stats.norm.ppf|.
@@ -5056,7 +5055,63 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   
   Верен ли этот результат для другого распределения?
 \begin{sol}
-  Для нормальной величины $\phi'(t) = -t \phi(t)$. Для других распределений формула не верна. 
+  Для нормальной величины $\phi'(t) = -t \phi(t)$. 
+  Для других распределений формула не верна. 
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Случайная величина $X$ имеет нормальное распределение $\cN(\mu; \sigma^2)$.
+
+Найдите точки перегиба функции плотности $f(x)$.
+  \begin{sol}
+    $\mu \pm \sigma$;
+\end{sol}
+\end{problem}
+
+
+
+\begin{problem}
+\begin{enumerate}
+  \item Известно, что $X \sim \cN(\mu; \sigma^2)$. 
+  Докажите, что величина $Y = a + bX$ тоже нормально распределена и найдите параметры этого распределения. 
+  \item Известно, что величины $X \sim \cN(\mu_x; \sigma^2_x)$ и $Y \sim \cN(\mu_y; \sigma^2_y)$ независимы.
+  Докажите, что величина $W = X  + Y$ тоже нормально распределена и найдите параметры этого распределения. 
+  \item Приведите пример двух нормально распределённых величин, сумма которых имеет нормальное распределение. 
+  \item Приведите пример двух нормально распределённых величин, сумма которых имеет не нормальное распределение. 
+\end{enumerate}
+\begin{sol}
+  \begin{enumerate}
+    \item При преобразовании плотности она сохранит свой вид. 
+    \item Можно, например, воспользоваться формулой свёртки предварительно выразив $X$ и $Y$ через стандартные нормальные. 
+    \item Любые независимые. 
+    \item Например, $X \sim \cN(0;1)$, величина $R$ равна $\pm 1$ в зависимости от броска монетки, $Y = RX$. 
+    Здесь окажется, что $Y \sim \cN(0; 1)$, однако $\P(X + Y = 0) > 0$, поэтому $X + Y$ не имеет нормального распределения. 
+  \end{enumerate}
+\end{sol}
+\end{problem}
+  
+
+
+\begin{problem}
+Величина $X$ имеет стандартное нормальное распределение, $X \sim \cN(0; 1)$.
+
+\begin{enumerate}
+  \item Найдите функцию производящую моменты для $X$, $m_X(t)$.
+  \item Найдите $\E(X^k)$.
+  \item Найдите $\E(\sin(aX))$, $\E(\cos(aX))$, $\E(\exp(aX))$.
+\end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+
+
+
+\begin{problem}
+% Напилить на задачки  \url{https://www.macs.hw.ac.uk/~fd78/Daly_SteinCoupling.pdf}
+  \begin{sol}
 \end{sol}
 \end{problem}
 
