more normal, Chernoff

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -5101,8 +5101,14 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   \item Найдите функцию производящую моменты для $X$, $m_X(t)$.
   \item Найдите $\E(X^k)$.
   \item Найдите $\E(\sin(aX))$, $\E(\cos(aX))$, $\E(\exp(aX))$.
+  \item Докажите, что для любой (не обязательно нормальной) величины выполнено неравенство Чернова,
+  \[
+  \P(X \geq a) \leq \inf_t \frac{m(t)}{\exp(ta)} = C(a).
+  \]
+  \item Найдите границу Чернова $C(a)$ для случайной величины $X \sim \cN(0;1)$.
 \end{enumerate}
 \begin{sol}
+  $\E(\sin(aX)) = 0$, $\E(\exp(aX)) = m_X(a)$, $C(a) = \exp(-a^2/ 2\sigma^2)$
 \end{sol}
 \end{problem}
   
@@ -5210,6 +5216,16 @@ $N$, под настроение.
 У кого шансы поймать хотя бы одну рыбку выше?
 \begin{sol}
     У Кота Матроскина.
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+Докажите, что для любой величины с производящей функцией моментов $m(t)$ выполнено неравенство Чернова,
+\[
+\P(X \geq a) \leq \inf_t \frac{m(t)}{\exp(ta)} = C(a).
+\]
+\begin{sol}
 \end{sol}
 \end{problem}
 
