--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -5101,7 +5101,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   \item Найдите функцию производящую моменты для $X$, $m_X(t)$.
   \item Найдите $\E(X^k)$.
   \item Найдите $\E(\sin(aX))$, $\E(\cos(aX))$, $\E(\exp(aX))$.
-  \item Докажите, что для любой (не обязательно нормальной) величины выполнено неравенство Чернова,
+  \item Докажите, что для любой величины (не только нормальной) выполнено неравенство Чернова,
   \[
   \P(X \geq a) \leq \inf_t \frac{m(t)}{\exp(ta)} = C(a).
   \]
