--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -6113,6 +6113,7 @@ Y
 \begin{enumerate}
 \item Найдите безусловный закон распределения величины $Y$.
 \item Найдите $\Cov(X,Y)$.
+\item Найдите закон распределения вектора $(X, Y)$.
 \item Найдите $\P(Y>2)$.
 \item Найдите $\E(X \mid Y)$, $\E(Y \mid X)$, $\Var(X \mid Y)$, $\Var(Y \mid X)$.
 \end{enumerate}
