--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -6151,7 +6151,7 @@ Y
 \begin{problem}
  Величины $X_1$ и $X_2$ независимы и нормальны $\cN(0, 9)$.
 
- Найдите вероятность $\E(X_1^2 - X_1 X_2 - 6X_2^2 \geq 0)$.
+ Найдите вероятность $\P(X_1^2 - X_1 X_2 - 6X_2^2 \geq 0)$.
 \begin{sol}
   Закрашиваем нужную фигуру на плоскости, и считаем долю закрашенного угла от полного разворота в $2\pi$.
 \end{sol}
