sols for angle in mutli normal

--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -6153,7 +6153,9 @@ Y
 
  Найдите вероятность $\P(X_1^2 - X_1 X_2 - 6X_2^2 \geq 0)$.
 \begin{sol}
-  Закрашиваем нужную фигуру на плоскости, и считаем долю закрашенного угла от полного разворота в $2\pi$.
+  Закрашиваем нужную фигуру на плоскости между прямыми $X_2 = X_1/3$ и $X_2 = -X_1/2$. 
+  Считаем долю закрашенного угла $2(\arctan(1/2) + \arctan(1/3)) = \pi/2$ от полного разворота в $2\pi$.
+  Ответ: $1/4$.
 \end{sol}
 \end{problem}
  
