--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -5323,6 +5323,9 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 \item Каким должно быть минимальное количество испытаний, чтобы
 вероятность отличия выборочной доли и истинной вероятности менее чем на 0.02 была больше 0.95?
 \end{enumerate}
+\begin{sol}
+\end{sol}
+\end{problem}
 
 
 \begin{problem}
@@ -5339,7 +5342,8 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 \begin{problem} «В пятницу 13-го»
   
   В пятницу 13 сентября 2019 года в Атланте перевернулся грузовик 
-  с 216 тысячями игральных кубиков\addtag{кубик}. К счастью, никто не пострадал. 
+  с 216 тысячями игральных кубиков\addtag{кубик}. 
+  К счастью, никто не пострадал. 
   \begin{enumerate}
     \item Какова вероятность того, что в сумме выпало больше 740000,
     если все кубики выпали на дорогу?
@@ -5388,12 +5392,86 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 \end{problem}
 
 
-\section{Дельта-метод}
 
-% delta-method
+\begin{problem}
+Величины $X_n$ независимы и имеют бета-распределение $\dBeta(2n, 3n)$.
+\begin{enumerate}
+  \item Сходится ли $X_n$ по вероятности?
+  \item Сходится ли $X_n$ по распределению?
+\end{enumerate}
+\begin{sol}
+  \begin{enumerate}
+    \item $\plim X_n = 2/5$
+    \item $2/5$
+  \end{enumerate}
+\end{sol}
+\end{problem}
+  
+
+\begin{problem}
+У меня бесконечное количество занумерованных корзин. 
+В корзине номер $k$ лежит $k$ шаров, из которых — один чёрный, а остальные — белые. 
+Я извлекаю шары из корзин по порядку, из каждой корзины по одному. 
+
+Обозначим $X_n$ — индикатор того, был ли извлечён чёрный шар. 
+Определим ещё $Y_n = \sqrt{n} X_n$ и $W_n = (X_1 + X_2 + \dots + X_n) / n$.
+
+\begin{enumerate}
+  \item К чему и в каком смысле сходится $X_n$?
+  \item Найдите вероятность $\P(\lim X_n = 0)$.
+  \item К чему и в каком смысле сходится $Y_n$?
+  \item К чему и в каком смысле сходится $W_n$?
+\end{enumerate}
+
+\begin{sol}
+  \end{sol}
+\end{problem}
+  
+
+\begin{problem}
+  У меня бесконечное количество занумерованных корзин. 
+  В корзине номер $k$ лежит $k$ шаров, из которых — один чёрный, а остальные — белые. 
+  Я извлекаю шары из корзин по очереди, из каждой корзины я извлекаю все шары в случайном порядке. 
+  Например, шар номер 7 извлекается из корзины номер 4.
+  
+  Обозначим $X_n$ — индикатор того, является ли шар номер $n$ чёрным.
+  Определим $Y_n = \sqrt{n} X_n$ и $W_n = (X_1 + X_2 + \dots + X_n) / n$.
+  
+  \begin{enumerate}
+    \item К чему и в каком смысле сходится $X_n$?
+    \item Найдите вероятность $\P(\lim X_n = 0)$.
+    \item К чему и в каком смысле сходится $Y_n$?
+    \item К чему и в каком смысле сходится $W_n$?
+  \end{enumerate}
+  
 \begin{sol}
 \end{sol}
 \end{problem}
+  
+\begin{problem}
+Случайная величина $U$ равномерна на отрезке $[0;1]$.
+Запишем величину $U$ в двоичной системе счисления, $U = 0,b_1b_2b_3b_4\dots$, где $b_i \in \{0, 1\}$.
+
+Величина $X_n$ равна индикатору того, что двоичная последовательность $b_1, b_2, b_3, \dots$
+начинается с двоичной записи натурального числа $n$.
+
+Определим $Y_n= \sqrt{n} X_n$.  
+
+  \begin{enumerate}
+    \item К чему и в каком смысле сходится $X_n$?
+    \item Найдите вероятность $\P(\lim X_n = 0)$.
+    \item К чему и в каком смысле сходится $Y_n$?
+  \end{enumerate}
+  
+\begin{sol}
+\end{sol}
+\end{problem}
+  
+
+
+\section{Дельта-метод}
+
+% delta-method
 
 \begin{problem}
  Величины $X_1$, \ldots, $X_n$ независимы и одинаково распределены с математическим ожиданием $10$ и дисперсией $20$. 
