more uniform problems

--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -1,3 +1,11 @@
+@article{rike2007mass,
+  title={Mass Point Geometry},
+  author={Rike, Tom},
+  hypenation={british},
+  url={https://mathcircle.berkeley.edu/sites/default/files/archivedocs/2007_2008/lectures/0708lecturespdf/MassPointsBMC07.pdf},
+  year={2007},
+  addendum={Перестановка грузиков помогает решать задачи по геометрии}
+}
 
 @book{feller2013vvedenie,
   title={Введение в теорию вероятностей и ее приложения},
