--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -1,3 +1,13 @@
+@article{burg2024feynman,
+  title={Feynman trick},
+  author={Burghelea, Zaharia},
+  hypenation={british},
+  url={https://zackyzz.github.io/feynman.html},
+  year={2024},
+  addendum={Шикарное изложение трюка Фейнмана для взятия интегралов}
+}
+
+
 @article{rike2007mass,
   title={Mass Point Geometry},
   author={Rike, Tom},
