--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -90,7 +90,7 @@
 
 % создание гиперссылок в pdf
 \usepackage[unicode, colorlinks=true, urlcolor=blue, hyperindex, breaklinks]{hyperref}
-
+\urlstyle{same} % шрифт из основного файла
 
 \usepackage{microtype} % свешиваем пунктуацию
 % теперь знаки пунктуации могут вылезать за правую границу текста, при этом текст выглядит ровнее
@@ -1080,16 +1080,19 @@ p = \frac{1}{6} + \frac{5}{6}\cdot\frac{5}{6}\cdot p, \quad p = \frac{6}{11}
 \end{problem}
 
 \begin{problem}
- Саша и Маша подкидывают монетку\addtag{монетка} до тех пор, пока не выпадет последовательность РОО или ОOР.
- Если игра закончится выпадением РОО, то выигрывает Саша, если ОOР, то — Маша.
-Случайная величина $X$ — общее количество подбрасываний, $Y$ — количество выпавших решек.
+Правильную монетку\addtag{монетка} подбрасывают бесконечное количество раз.
+Рассмотрим величины $N_{HTT}$ — момент первого выпадения последовательности $HTT$ и $N_{TTH}$ — момент первого выпадения последовательности $TTH$.
+Обозначим момент выпадения первой из этих последовательностей $X = \min\{N_{HTT}, N_{TTH}\}$, а количество решек выпавших к моменту времени $X$ обозначим за $Y$.
+
 \begin{enumerate}
-\item У кого какие шансы выиграть?
-\item Найдите $\P(X=4)$, $\P(Y=1)$, $\E(X)$, $\E(Y)$.
-\item Решите аналогичную задачу для ОРО и ООР.
+\item Найдите $\P(N_{HTT} = 4)$, $\E(N_{HTT})$, $\E(N_{TTH})$.
+\item Какова вероятность $\P(X = N_{HTT})$, другими словами, вероятность того, что последовательность $HTT$ выпадет раньше?
+\item Найдите $\P(X=4)$, $\P(Y = 1)$, $\E(X)$, $\E(Y)$.
+\item Найдите $\E(\max\{N_{HTT}, N_{TTH}\})$.
+\item Решите аналогичную задачу для последовательностей $THT$ и $TTH$.
 \end{enumerate}
 \begin{sol}
-
+% TODO: поправить текст решения (тк дополнено условие)
 Нарисуем дерево
 
 \begin{center}
@@ -1225,7 +1228,7 @@ $\P(Y=1) = 1/4 + 1/8 + 1/16 = 7/16$
 \end{tikzpicture}
 \end{center}
 
-Остальные пункты аналогичные.
+
 \end{enumerate}
 
 \end{sol}
@@ -1633,7 +1636,9 @@ p(\alpha)=\begin{cases}
  Они одновременно подбрасывают свои монетки\addtag{монетка} до тех пор,
  пока у них не окажется набранным одинаковое количество орлов.
  В частности, они останавливаются после первого подбрасывания,
- если оно дало одинаковые результаты. Сколько в среднем раз им придётся подбросить монетку\addtag{монетка}?
+ если оно дало одинаковые результаты. 
+ 
+ Сколько в среднем раз им придётся подбросить монетку\addtag{монетка}?
 \begin{sol}
 \end{sol}
 \end{problem}
@@ -5260,13 +5265,95 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 
 
 \begin{problem}
-% Напилить на задачки  \url{https://www.macs.hw.ac.uk/~fd78/Daly_SteinCoupling.pdf}
+% TODO: Напилить на задачки  \url{https://www.macs.hw.ac.uk/~fd78/Daly_SteinCoupling.pdf}
   \begin{sol}
 \end{sol}
 \end{problem}
 
 
+\section{Трюк Фейнмана и метод Крофтона}
 
+\begin{leftbar}
+  Трюк Фейнмана \cite{burg2024feynman} для нахождения интеграла $I$:
+  \begin{enumerate}
+    \item Вводим в искомый интеграл $I$ параметр $t$.
+    \item Для нахождения интеграла $I(t)$ сначала находим более простой интеграл $I'(t)$.
+  \end{enumerate}
+
+  Метод Крофтона для нахождения ожидания $I = \E(Y)$:
+  \begin{enumerate}
+    \item Вводим в искомое ожидание $I$ параметр $t$:
+    \item Рассматриваем малое изменение параметра $t$ для получения дифференциального уравнения на $I(t)$.
+  \end{enumerate}
+\end{leftbar}
+
+\begin{problem}
+Случайная величина $X$ имеет стандартное нормальное распределение $X \sim \cN(0, 1)$.
+Обозначим её функцию распределения за $F$.
+
+При поиске вероятности пересечения отрезка горизонтальной оси броуновским движением оказывается полезна функция 
+\[
+h(t) = \E(F(tX)\cdot I(X \leq 0)).
+\]
+\begin{enumerate}
+  \item Найдите $h(0)$, $h(+\infty)$, $h(-\infty)$.
+  \item Найдите $h'(t)$.
+  \item Найдите $h(t)$.
+\end{enumerate}
+
+\begin{sol}
+  \begin{enumerate}
+    \item $h(0) = 0.5$;
+    \item 
+    \item 
+  \end{enumerate}  
+\end{sol}
+\end{problem}
+
+\begin{problem}
+  Функция плотности экспоненциальной случайной величины $X$ с интенсивностью $\lambda$ равна $f(x) = \lambda \exp(- \lambda x)$ при $x \geq 0$.
+
+  Обозначим $h(\lambda) = \int_0^{\infty} \exp(- \lambda x) \, dx$.
+  \begin{enumerate}
+    \item Найдите $h(\lambda)$, $h'(\lambda)$ и $h^{(n)}(\lambda)$.
+    \item Как связаны между собой $h'(\lambda)$ и $\E(X)$?
+    \item Как связаны между собой $h''(\lambda)$ и $\E(X^2)$?
+    \item Найдите $\E(X^n)$ для интенсивности $\lambda = 1$.
+    \item Запишите $n!$ с помощью интеграла.
+  \end{enumerate}
+  \begin{sol}
+    \begin{enumerate}
+      \item $h(\lambda) = 1/\lambda$, $h^{(n)}(\lambda) = (-1)^{n} n! /\lambda^{n+1}$. 
+      \item 
+      \item 
+      \item $\E(X^n) = n!$;
+      \item $n! = \int_0^{\infty} x^n \exp(-x) \, dx$.      
+    \end{enumerate}  
+  \end{sol}
+\end{problem}
+
+\begin{problem}
+Величины $X_1$, $X_2$, \dots, $X_n$ независимы и равномерно распределены на отрезке $[0, a]$,
+рассмотрим величину $Y = \max\{X_1, \dots, X_n\}$ и её ожидание $h(a) = \E(Y)$.
+\begin{enumerate}
+    \item Выпишите уравнение, связывающее $h(a + u)$ и $h(a)$, с точностью до $o(u)$.
+    \item Выпишите дифференциальное уравнение, которому удовлетворяет функция $h(a)$.
+    \item Укажите начальное условие, которому удовлетворяет функция $h(a)$.
+\end{enumerate}
+
+\begin{sol}
+  \begin{enumerate}
+    \item Величина $u$ мала. Разобъём отрезок $[0, a + u]$ на две части: большую, $[0, a]$, и малую, $[a, a + u]$.
+    Либо все $n$ величин лягут на отрезок $[0, a]$, либо одна величина ляжет на малую часть $[a, a + u]$.
+    Вероятностью того, что две и более величин лягут на малую часть отрезка можно пренебречь:
+    \[
+    h(a + u) = \left(\frac{a}{a + u}\right)^n h(a) + C_n^1 \left(\frac{a}{a + u}\right)^{n-1} \left(\frac{u}{a + u}\right) \cdot a + o(u).
+    \]    
+    \item 
+    \item $h(0) = 0$;
+  \end{enumerate}  
+\end{sol}
+\end{problem}
 
 \section{Долой неравенство Чебышёва и Маркова}
 
