--- a/probability_pro.bib
+++ b/probability_pro.bib
@@ -1,3 +1,12 @@
+@article{jin2018elchanan,
+  author = {Jimmy Jin},
+  hypenation={british},
+  title = {Elchanan Mossel’s dice problem},
+  url={https://www.yichijin.com/files/elchanan.pdf},
+  addendum={Сколько в среднем было бросков до первой шестёрки, если ни разу не выпадала нечётная грань?},
+  year = {2018}
+}
+
 @article{burg2024feynman,
   title={Feynman trick},
   author={Burghelea, Zaharia},
