--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2895,6 +2895,19 @@ $ 2/3 $, $1/2$, $ 1/2 $, $ 14/27 $
 \end{sol}
 \end{problem}
 
+\begin{problem}
+Эльханан подбрасывает правильный кубик до первого выпадения шестёрки.
+\begin{enumerate}
+  \item Сколько в среднем бросков ему потребуется?
+  \item Сколько в среднем бросков ему потребовалось, если ни разу не выпадала нечётная грань?
+  \item Сколько в среднем бросков ему потребовалось, если нечётная грань выпала $N$ раз?
+\end{enumerate}
+\begin{sol}
+  \autocite{jin2018elchanan}
+\end{sol}
+\end{problem}
+
+
 \newcommand{\strx}{\textasteriskcentered}
 
 
@@ -5275,16 +5288,16 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 
 \begin{leftbar}
   Трюк Фейнмана \cite{burg2024feynman} для нахождения интеграла $I$:
-  \begin{enumerate}
+  \begin{itemize}
     \item Вводим в искомый интеграл $I$ параметр $t$.
     \item Для нахождения интеграла $I(t)$ сначала находим более простой интеграл $I'(t)$.
-  \end{enumerate}
+  \end{itemize}
 
   Метод Крофтона для нахождения ожидания $I = \E(Y)$:
-  \begin{enumerate}
+  \begin{itemize}
     \item Вводим в искомое ожидание $I$ параметр $t$:
     \item Рассматриваем малое изменение параметра $t$ для получения дифференциального уравнения на $I(t)$.
-  \end{enumerate}
+  \end{itemize}
 \end{leftbar}
 
 \begin{problem}
